@@ -1,3 +1,8 @@
+2002-12-02  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-mkdb.in (MakeDeprecationNote): Support multi-paragraph 
+	deprecation notes.
+
 2002-11-29  James Henstridge  <james@daa.com.au>
 
 	* gtkdoc-mkhtml.in: copy the navigation images for both XML and
